--- a/delivery-service.properties
+++ b/delivery-service.properties
@@ -1,12 +1,12 @@
-spring.application.name=user-service
+spring.application.name=delivery-service
 
 server.port=8004
-server.servlet.context-path=/user-api
+server.servlet.context-path=/delivery
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:1997/korzinka_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/korzinka_db
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=1
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
